deploy/k8s/overlays/scaleway/filebrowser-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: bootstrap
spec:
  replicas: 1
